Fix spacing for icons in Filters

--- a/src/styles/Filters.pcss
+++ b/src/styles/Filters.pcss
@@ -4,10 +4,9 @@
   z-index: 2;
   color: var(--white);
   background-color: var(--blue);
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.16), 0 3px 5px rgba(0, 0, 0, 0.23);
 
   & .filterBox {
-    width: 25%;
+    flex: 1;
     display: inline-flex;
     flex-flow: column wrap;
   }
@@ -61,7 +60,7 @@
   }
 
   & .head .types-container {
-    display: inline-block;
+    display: inline-flex;
     flex: 2;
   }
 
